# Rippling-Market-Research-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/agents/: llm-and-output.md  pipeline.md  tools-and-cache.md
outputs_test_citations/: gusto_brief.md  gusto_data.json
src/: __init__.py  cache.py  config.py  graph.py  gui.py  main.py  schemas.py  state.py  text_cleanup.py
src/data/: __init__.py  dummy_rippling_positioning.py  dummy_sources.py
src/llm/: __init__.py  anthropic_client.py  base.py  fake_llm.py  openai_client.py  prompts.py  service.py  token_usage.py
src/nodes/: __init__.py  campaign_angle_generator.py  category_report_sections.py  competitor_resolver.py  coverage_gap_detector.py  eval_layer.py  evidence_extraction.py  messaging_positioning.py  output_writer.py  planner_decision.py  recent_change_detector.py  report_qa.py  research_planner.py  rippling_opportunity_mapper.py  source_analysis.py  source_coverage_review.py  source_discovery.py
src/tools/: __init__.py  ads_tools.py  adyntel_ads_tool.py  apify_linkedin_tool.py  (+13 more)
tests/: conftest.py  test_adyntel_ads_tool.py  test_anthropic_client.py  test_apify_linkedin_tool.py  test_apify_x_twitter_tool.py  test_category_report_sections.py  test_eval_layer.py  test_exa_domain_tool.py  test_exa_linkedin_tool.py  test_exa_research_tools.py  test_exa_twitter_tool.py  test_gui_helpers.py  test_llm_integration.py  test_llm_service.py  test_pipeline.py  test_report_qa.py  test_rippling_opportunity_mapper.py  test_schemas.py  test_token_usage.py  test_tool_registry.py
