[project]
name = "competitive-intel-agent"
version = "0.1.0"
description = "Local prototype of a bounded competitive marketing intelligence agent."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7,<3",
  "openai>=2.0,<3",
  "python-dotenv>=1.0,<2",
  "httpx>=0.28,<1",
  "exa-py==2.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
